Добавила страницу с курсами

--- a/transparent-world/src/pages/StartPage/StartPage.scss
+++ b/transparent-world/src/pages/StartPage/StartPage.scss
@@ -4,7 +4,7 @@
 }
 
 .heading {
-    color: #FFFFFF;
+    color: #E0E0E0;
     text-transform: lowercase;
     font-family: "Underdog", system-ui;
     font-size: 64px;
