Добавила страницу с редактором кода

--- a/transparent-world/src/globals/colors.scss
+++ b/transparent-world/src/globals/colors.scss
@@ -2,3 +2,4 @@ $background-primary: #0D0D0D;
 $pink-neon-button: #FF10F0;
 $turquoise-neon-button: #00F5D4;
 $blue-neon-button: #6200EE;
+$text: #E0E0E0;
