--- a/transparent-world/src/index.css
+++ b/transparent-world/src/index.css
@@ -1,3 +1,16 @@
 :root {
-  background-color: #0D0D0D ;
+  background-color: #0D0D0D;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  margin: 0;
+}
+
+#root {
+  height: 100%;
 }
