--- a/transparent-world/src/components/CourseCard/CourseCard.scss
+++ b/transparent-world/src/components/CourseCard/CourseCard.scss
@@ -7,24 +7,30 @@
     flex-direction: column;
 }
 
-.MuiLinearProgress-root.MuiLinearProgress-colorPrimary.js > span {
-    background-color: rgb(255 216 0);
+.MuiLinearProgress-root.MuiLinearProgress-colorPrimary.js {
+    span {
+        background-color: rgb(255 216 0);
+    }
 }
 
 .MuiLinearProgress-root.MuiLinearProgress-colorPrimary.js {
     background-color: rgb(255 216 0 / 0.4);
 }
 
-.MuiLinearProgress-root.MuiLinearProgress-colorPrimary.css > span {
-    background-color: rgb(0 58 255);
+.MuiLinearProgress-root.MuiLinearProgress-colorPrimary.css {
+    span {
+        background-color: rgb(0 58 255);
+    }
 }
 
 .MuiLinearProgress-root.MuiLinearProgress-colorPrimary.css {
     background-color: rgb(0 58 255 / 0.4);
 }
 
-.MuiLinearProgress-root.MuiLinearProgress-colorPrimary.html > span {
-    background-color: rgb(255 72 0);
+.MuiLinearProgress-root.MuiLinearProgress-colorPrimary.html {
+    span {
+        background-color: rgb(255 72 0);
+    }
 }
 
 .MuiLinearProgress-root.MuiLinearProgress-colorPrimary.html {
