--- a/transparent-world/src/pages/CoursesPage/CoursesPage.module.scss
+++ b/transparent-world/src/pages/CoursesPage/CoursesPage.module.scss
@@ -2,6 +2,6 @@
     display: flex;
     gap: 20px;
     justify-content: center;
-    height: 100%;
+    height: calc(100% - 90px);
     align-items: center;
 }
