Начала добавлять страницу с теорией

--- a/transparent-world/src/components/CircleButton/CircleButton.scss
+++ b/transparent-world/src/components/CircleButton/CircleButton.scss
@@ -2,7 +2,7 @@
     border-radius: 50%;
     text-transform: none;
     color: #1E1E1E;
-    font-family: "Underdog", system-ui;
+    font-family: "Manrope", system-ui;
     cursor: pointer;
     transition: transform 0.2s;
 
