--- a/transparent-world/src/components/RegistrationForm/RegistrationForm.scss
+++ b/transparent-world/src/components/RegistrationForm/RegistrationForm.scss
@@ -4,12 +4,12 @@
     gap: 16px;
     width: 400px;
     text-align: center;
-    font-family: "Underdog", system-ui;
+    font-family: "Manrope", system-ui;
 }
 
 .registrationInput {
     font-size: 24px;
-    font-family: "Underdog", system-ui;
+    font-family: "Manrope", system-ui;
     border-color: #FF10F0;
     border-radius: 4px;
     padding: 12px;
@@ -24,7 +24,7 @@
 .MuiButtonBase-root.registrationButton {
     background-color: #FF10F0;
     text-transform: none;
-    font-family: "Underdog", system-ui;
+    font-family: "Manrope", system-ui;
     font-size: 18px;
     color: #1E1E1E;
     padding: 12px;
@@ -40,7 +40,7 @@
     font-size: 16px;
     color: #FF10F0;
     padding: 12px;
-    font-family: "Underdog", system-ui;
+    font-family: "Manrope", system-ui;
     transition: color 0.6s, text-decoration 0.6s;
 }
 
