--- a/transparent-world/src/components/UserAvatar/UserAvatar.module.scss
+++ b/transparent-world/src/components/UserAvatar/UserAvatar.module.scss
@@ -3,6 +3,6 @@
     gap: 12px;
     align-items: center;
     color: #E0E0E0;
-    font-family: "Underdog", system-ui;
+    font-family: "Manrope", system-ui;
     font-size: 24px;
 }
