--- a/transparent-world/src/pages/CodeTaskPage/CodeTaskPage.scss
+++ b/transparent-world/src/pages/CodeTaskPage/CodeTaskPage.scss
@@ -1,7 +1,7 @@
 .code-task-page {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    font-family: "Underdog", system-ui;
+    font-family: "Manrope", system-ui;
 }
 
 .code-task {
@@ -30,5 +30,5 @@
     margin-right: 20px;
     align-self: flex-end;
     text-transform: none;
-    font-family: "Underdog", system-ui;
+    font-family: "Manrope", system-ui;
 }
