--- a/transparent-world/src/pages/LoginPage/LoginPage.module.scss
+++ b/transparent-world/src/pages/LoginPage/LoginPage.module.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     height: 100%;
     color: #E0E0E0;
-    font-family: "Underdog", system-ui;
+    font-family: "Manrope", system-ui;
 }
 
 .loginPageHeader {
