--- a/transparent-world/src/pages/StartPage/StartPage.scss
+++ b/transparent-world/src/pages/StartPage/StartPage.scss
@@ -6,6 +6,6 @@
 .heading {
     color: #E0E0E0;
     text-transform: lowercase;
-    font-family: "Underdog", system-ui;
+    font-family: "Manrope", system-ui;
     font-size: 64px;
 }
