--- a/transparent-world/src/components/Header/Header.module.scss
+++ b/transparent-world/src/components/Header/Header.module.scss
@@ -13,7 +13,7 @@
     a {
         color: white;
         text-decoration: none;
-        font-family: "Underdog", system-ui;
+        font-family: "Manrope", system-ui;
         transition: color 0.6s;
     }
 
