--- a/transparent-world/src/pages/TheoryPage/TheoryPage.module.scss
+++ b/transparent-world/src/pages/TheoryPage/TheoryPage.module.scss
@@ -1,8 +1,4 @@
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+    padding: 0 40px;
+    box-sizing: border-box;
 }
