Пофиксила конфликт классов в CSS

--- a/transparent-world/src/components/ProfileCard/ProfileCard.scss
+++ b/transparent-world/src/components/ProfileCard/ProfileCard.scss
@@ -35,12 +35,12 @@
     gap: 16px;
 }
 
-.courseTitle {
+.userCourseTitle {
     flex-grow: 1;
     font-size: 16px;
 }
 
-.courseProgress {
+.userCourseProgress {
     display: flex;
     gap: 12px;
     align-items: center;
