Реализовала логику решения тестов

--- a/transparent-world/src/components/PracticeContent/PracticeContent.scss
+++ b/transparent-world/src/components/PracticeContent/PracticeContent.scss
@@ -13,3 +13,11 @@
     font-family: 'Manrope', system-ui;
     margin-top: 0;
 }
+
+.MuiButtonBase-root.MuiListItemButton-root {
+    .MuiListItemIcon-root {
+        color: green;
+        min-width: 0;
+        padding-right: 10px;
+    }
+}
