--- a/transparent-world/src/components/ProfileCard/ProfileCard.scss
+++ b/transparent-world/src/components/ProfileCard/ProfileCard.scss
@@ -45,3 +45,10 @@
     gap: 12px;
     align-items: center;
 }
+
+.achievement {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    padding-bottom: 12px;
+}
