Доделки по редактору и тетрису

--- a/transparent-world/src/components/TestModal/TestModal.scss
+++ b/transparent-world/src/components/TestModal/TestModal.scss
@@ -13,6 +13,10 @@
         font-family: 'Manrope', system-ui;
         font-size: 18px;
     }
+
+    .MuiButtonBase-root.MuiButton-root.MuiButton-contained.gameOver {
+        background-color: red;
+    }
 }
 
 .MuiTypography-root.MuiTypography-h6.MuiDialogTitle-root {
